<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosSuperHeroeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivSuperheroe"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="230dp"
            android:elevation="8dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNombreSuperHeroe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/greyF"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:text="Prueba" />

                <TextView
                    android:id="@+id/tvNombreRealSuperHeroe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/greyF"
                    android:textStyle="italic"
                    tools:text="Prueba" />

                <TextView
                    android:id="@+id/tvPrimeraAparicion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:textSize="11sp"
                    tools:text="Prueba" />

                <TextView
                    android:id="@+id/tvPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:textSize="11sp"
                    tools:text="Prueba" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/vIntelligence"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:background="@color/intelligence" />

                    <View
                        android:id="@+id/vStrength"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:background="@color/strength" />

                    <View
                        android:id="@+id/vSpeed"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:background="@color/speed" />

                    <View
                        android:id="@+id/vDurability"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:background="@color/durability" />

                    <View
                        android:id="@+id/vPower"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:background="@color/power" />

                    <View
                        android:id="@+id/vCombat"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:background="@color/combat" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="4dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/intelligence"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/strength"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/speed"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/durability"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/power"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/combat"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:background="@color/greyF"
        android:text="@string/volverBuscar"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
